@@ -20,6 +20,7 @@ This release includes the following bugfixes:
  o NetWare LIBC builds are now largefile feature enabled by default
  o curl_easy_pause() could behave wrongly on unpause
  o cookie with invalid expire dates are now considered expired
+ o HTTP pipelining over proxy
 
 This release includes the following known bugs:
 
@@ -33,6 +34,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Keith Mok, Yang Tse, Daniel Fandrich, Guenter Knauf, Dmitriy Sergeyev,
- Linus Nielsen Feltzing, Martin Drasar, Stefan Krause
+ Linus Nielsen Feltzing, Martin Drasar, Stefan Krause, Dmitry Kurochkin
 
         Thanks! (and sorry if I forgot to mention someone)
